force-app/main/default/objects/Invoice_Payment_Attributes__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Payment_Attributes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Payment_Attributes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Payment_Attributes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activation_Item_Total__c</fullName>
        <label>Activation Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auditguard_Item_Total__c</fullName>
        <label>Auditguard  Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_Payment_Basis__c</fullName>
        <formula>CASE( Invoice_Term__c , 
&quot;2 Years&quot;, ( Invoice_Amount_without_Tax__c  -  Refund_Amount__c -  Credit_Balance_Adjustment_Amount__c - Program_Management_Fees__c ) / 2, 
&quot;3 Years&quot;, ( Invoice_Amount_without_Tax__c  -  Refund_Amount__c -  Credit_Balance_Adjustment_Amount__c - Program_Management_Fees__c ) / 3,  
Invoice_Amount_without_Tax__c  -  Refund_Amount__c -  Credit_Balance_Adjustment_Amount__c - Program_Management_Fees__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Payment Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Payment Attributes (Client)</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Operator_Contractor__c</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Balance_Adjustment_Amount__c</fullName>
        <label>Credit Balance Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docuguard_Item_Total__c</fullName>
        <label>Docuguard Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employeeguard_Item_Total__c</fullName>
        <label>Employeeguard Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Basis_Amount__c</fullName>
        <label>Final Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Status__c</fullName>
        <description>Paid / Not Paid</description>
        <inlineHelpText>Enter Paid or Not Paid</inlineHelpText>
        <label>Final Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insureguard_Item_Total__c</fullName>
        <label>Insureguard Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_without_Tax__c</fullName>
        <label>Invoice Amount without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Amount__c</fullName>
        <label>Invoice Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Payment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Payment ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Tag__c</fullName>
        <label>Invoice Tag</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Term__c</fullName>
        <businessOwnerGroup>Sales_Management</businessOwnerGroup>
        <label>Invoice Term</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Payment_Basis__c</fullName>
        <formula>if( Invoice_Amount_without_Tax__c &lt;  Calculated_Payment_Basis__c ,  Invoice_Amount_without_Tax__c ,  Calculated_Payment_Basis__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Payment Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Bid_Item_Total__c</fullName>
        <label>Other Bid Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Listed_Item_Total__c</fullName>
        <label>Other Listed Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Management_Fees__c</fullName>
        <label>Program Management Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Amount_prior_pmt__c</fullName>
        <label>Refund Amount - prior pmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Split_1_Final_Basis__c</fullName>
        <formula>If( Split_1_Percent__c &gt; 0,  Final_Basis_Amount__c *  Split_1_Percent__c ,  Final_Basis_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split 1 Final Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_1_Percent__c</fullName>
        <label>Split 1 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_2_Final_Basis__c</fullName>
        <formula>if( Split_2_Percent__c &gt; 0,  Final_Basis_Amount__c *  Split_2_Percent__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split 2 Final Basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_2_Percent__c</fullName>
        <label>Split 2 %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Split_thru_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Split thru Date</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Payment_Attributes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay</fullName>
                </value>
                <value>
                    <fullName>No Pay</fullName>
                </value>
                <value>
                    <fullName>verify</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Deactivation_Date__c</fullName>
        <label>Supplier Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_month__c</fullName>
        <description>Month of processing for commission purposes.  Actual commission payment occurs on 31st of following month.</description>
        <label>Transaction Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unknown_Item_Total__c</fullName>
        <label>Unknown Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora_Invoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zuora Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Payment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Zuora Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Refund_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund Payment</label>
        <referenceTo>Zuora__RefundInvoicePayment__c</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora_Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund</label>
        <referenceTo>Zuora__Refund__c</referenceTo>
        <relationshipLabel>Invoice Payment Attributes</relationshipLabel>
        <relationshipName>Invoice_Payment_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Payment Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Invoice_Payment_Id__c</columns>
        <columns>NAME</columns>
        <columns>Zuora_Payment__c</columns>
        <columns>Zuora_Invoice__c</columns>
        <columns>Invoice_Amount_without_Tax__c</columns>
        <columns>Invoice_Payment_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Supplier__c</columns>
        <columns>Client__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Campaign__c</columns>
        <columns>Connection__c</columns>
        <columns>Invoice_Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Payment_Id__c</field>
            <operation>contains</operation>
            <value>INV00640049</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IPA_update_view</fullName>
        <columns>Invoice_Tag__c</columns>
        <columns>Invoice_Payment_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Final_Basis_Amount__c</columns>
        <columns>Split_1_Final_Basis__c</columns>
        <columns>Split_2_Final_Basis__c</columns>
        <columns>Client__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Account_Manager_2__c</columns>
        <columns>Account_Executive_2__c</columns>
        <columns>Transaction_month__c</columns>
        <columns>Split_1_Percent__c</columns>
        <columns>Split_2_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Not Paid,No Pay,Pay</value>
        </filters>
        <filters>
            <field>Payment_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>5/31/2019 12:00 AM</value>
        </filters>
        <label>IPA update view</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Records</fullName>
        <columns>NAME</columns>
        <columns>Zuora_Invoice__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Tag__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Zuora_Payment__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Invoice_Payment_Id__c</columns>
        <columns>Invoice_Payment_Amount__c</columns>
        <columns>Zuora_Refund__c</columns>
        <columns>Refund_Date__c</columns>
        <columns>Refund_Amount__c</columns>
        <columns>Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>New Records</label>
    </listViews>
    <listViews>
        <fullName>Payments_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Zuora_Payment__c</columns>
        <columns>Zuora_Invoice__c</columns>
        <columns>Invoice_Tag__c</columns>
        <columns>Invoice_Amount_without_Tax__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Supplier__c</columns>
        <columns>Client__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Campaign__c</columns>
        <columns>Supplier_Deactivation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/27/2018 12:00 AM</value>
        </filters>
        <label>Payments This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reactivations</fullName>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Supplier_Deactivation_Date__c</columns>
        <columns>Invoice_Amount_without_Tax__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Supplier__c</columns>
        <columns>Client__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Calculated_Payment_Basis__c</columns>
        <columns>NAME</columns>
        <columns>Invoice_Tag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid,Not Paid</value>
        </filters>
        <label>Reactivations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Refunds</fullName>
        <columns>Invoice_Payment_Id__c</columns>
        <columns>NAME</columns>
        <columns>Net_Payment_Basis__c</columns>
        <columns>Final_Basis_Amount__c</columns>
        <columns>Zuora_Refund__c</columns>
        <columns>Refund_Amount__c</columns>
        <columns>Refund_Date__c</columns>
        <columns>Invoice_Tag__c</columns>
        <columns>Invoice_Amount_without_Tax__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Supplier__c</columns>
        <columns>Client__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Refund_Amount__c</field>
            <operation>greaterOrEqual</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>Refund_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/31/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Paid,Paid</value>
        </filters>
        <label>Refunds</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unassigned_Account_Manager_or_Client</fullName>
        <booleanFilter>(1 OR 2 OR 3) and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Amount_without_Tax__c</columns>
        <columns>Invoice_Tag__c</columns>
        <columns>Supplier__c</columns>
        <columns>Client__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Campaign__c</columns>
        <columns>Connection__c</columns>
        <columns>Zuora_Invoice__c</columns>
        <columns>Zuora_Payment__c</columns>
        <columns>Payment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Manager__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Client__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Account_Executive__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unassigned Account Manager or Client</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Payment Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>